@@ -17,33 +17,31 @@
 
 package org.keycloak.models.sessions.infinispan.events;
 
-import org.keycloak.cluster.ClusterEvent;
-import org.keycloak.connections.infinispan.TopologyInfo;
-import org.keycloak.models.KeycloakSession;
-import org.keycloak.connections.infinispan.InfinispanUtil;
-import java.io.IOException;
-import java.io.ObjectInput;
-import java.io.ObjectOutput;
 import java.util.Objects;
 
-import org.infinispan.commons.marshall.MarshallUtil;
+import org.infinispan.protostream.annotations.ProtoField;
+import org.infinispan.protostream.annotations.ProtoReserved;
+import org.keycloak.cluster.ClusterEvent;
+import org.keycloak.connections.infinispan.InfinispanUtil;
+import org.keycloak.connections.infinispan.TopologyInfo;
+import org.keycloak.models.KeycloakSession;
 
 /**
  * @author <a href="mailto:mposolda@redhat.com">Marek Posolda</a>
  */
+@ProtoReserved(numbers = {3}, names = {"resendingEvent"})
 public abstract class SessionClusterEvent implements ClusterEvent {
 
     private String realmId;
     private String eventKey;
-    private boolean resendingEvent;
     private String siteId;
     private String nodeId;
 
 
-    public static <T extends SessionClusterEvent> T createEvent(Class<T> eventClass, String eventKey, KeycloakSession session, String realmId, boolean resendingEvent) {
+    public static <T extends SessionClusterEvent> T createEvent(Class<T> eventClass, String eventKey, KeycloakSession session, String realmId) {
         try {
-            T event = eventClass.newInstance();
-            event.setData(session, eventKey, realmId, resendingEvent);
+            T event = eventClass.getDeclaredConstructor().newInstance();
+            event.setData(session, eventKey, realmId);
             return event;
         } catch (Exception e) {
             throw new RuntimeException(e);
@@ -51,34 +49,49 @@ public abstract class SessionClusterEvent implements ClusterEvent {
     }
 
 
-    void setData(KeycloakSession session, String eventKey, String realmId, boolean resendingEvent) {
+    void setData(KeycloakSession session, String eventKey, String realmId) {
         this.realmId = realmId;
         this.eventKey = eventKey;
-        this.resendingEvent = resendingEvent;
         TopologyInfo topology = InfinispanUtil.getTopologyInfo(session);
         this.siteId = topology.getMySiteName();
         this.nodeId = topology.getMyNodeName();
     }
 
 
+    @ProtoField(1)
     public String getRealmId() {
         return realmId;
     }
 
+    void setRealmId(String realmId) {
+        this.realmId = realmId;
+    }
+
+    @ProtoField(2)
     public String getEventKey() {
         return eventKey;
     }
 
-    public boolean isResendingEvent() {
-        return resendingEvent;
+    void setEventKey(String eventKey) {
+        this.eventKey = eventKey;
     }
 
+    @ProtoField(4)
     public String getSiteId() {
         return siteId;
     }
 
+    void setSiteId(String siteId) {
+        this.siteId = siteId;
+    }
+
+    @ProtoField(5)
     public String getNodeId() {
         return nodeId;
+    }
+
+    void setNodeId(String nodeId) {
+        this.nodeId = nodeId;
     }
 
     @Override
@@ -98,41 +111,5 @@ public abstract class SessionClusterEvent implements ClusterEvent {
     public String toString() {
         String simpleClassName = getClass().getSimpleName();
         return String.format("%s [ realmId=%s ]", simpleClassName, realmId);
-    }
-
-    // Infinispan marshalling support for child classes
-    private static final int VERSION_1 = 1;
-
-    protected void marshallTo(ObjectOutput output) throws IOException {
-        output.writeByte(VERSION_1);
-
-        MarshallUtil.marshallString(realmId, output);
-        MarshallUtil.marshallString(eventKey, output);
-        output.writeBoolean(resendingEvent);
-        MarshallUtil.marshallString(siteId, output);
-        MarshallUtil.marshallString(nodeId, output);
-    }
-
-    /**
-     * Sets the properties of this object from the input stream.
-     * @param input
-     * @throws IOException
-     */
-    protected void unmarshallFrom(ObjectInput input) throws IOException {
-        switch (input.readByte()) {
-            case VERSION_1:
-                unmarshallFromVersion1(input);
-                break;
-            default:
-                throw new IOException("Unknown version");
-        }
-    }
-
-    private void unmarshallFromVersion1(ObjectInput input) throws IOException {
-        this.realmId = MarshallUtil.unmarshallString(input);
-        this.eventKey = MarshallUtil.unmarshallString(input);
-        this.resendingEvent = input.readBoolean();
-        this.siteId = MarshallUtil.unmarshallString(input);
-        this.nodeId = MarshallUtil.unmarshallString(input);
     }
 }
