@@ -11,9 +11,10 @@ import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.ui.ExpectedCondition;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -62,7 +63,7 @@ public class BrokerTestTools {
     public static void waitForPage(final WebDriver driver, final String title, final boolean isHtmlTitle) {
         waitForPageToLoad();
 
-        WebDriverWait wait = new WebDriverWait(driver, 5);
+        WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(5));
         ExpectedCondition<Boolean> condition = new ExpectedCondition<Boolean>() {
             private String actualTitle = null;
 
@@ -89,7 +90,7 @@ public class BrokerTestTools {
     }
 
     public static void waitForElementEnabled(WebDriver driver, final String elementName) {
-        WebDriverWait wait = new WebDriverWait(driver, 5);
+        WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(5));
 
         ExpectedCondition<Boolean> condition = (WebDriver input) -> {
             List<WebElement> elements = input.findElements(By.name(elementName));
@@ -100,14 +101,7 @@ public class BrokerTestTools {
     }
 
     public static String encodeUrl(String url) {
-        String result;
-        try {
-            result = URLEncoder.encode(url, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            result = url;
-        }
-
-        return result;
+        return URLEncoder.encode(url, StandardCharsets.UTF_8);
     }
 
     /**
